--- a/style.css
+++ b/style.css
@@ -1,48 +1,345 @@
 *
 {
+    padding: 0;
     margin: 0;
+}
+
+.h1-index, .h1-shop
+{
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+
+.h1-a
+{
+    text-decoration: none;
+    color: #FFA500;
+}
+
+.header-index
+{
+    width: 92%;
+    /* background-color: #000; */
+    margin-left: 4%;
+    border-radius: 15px;
+    padding-bottom: 20px;
+}
+
+.header-index nav
+{
+    /* background-color: #FFA500; */
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
+.header-index nav a
+{
+    text-decoration: none;
+    color: #000; 
+    display: flex;
+    align-items: center;
+}
+
+
+.header-index nav .current-page a
+{
+    color: #FFF; 
+}
+
+.header-index nav ul
+{
+    list-style: none;
+    display: flex;
+    justify-content: center;
     padding: 0;
 }
 
-.bodyClass
+.header-index nav ul li
 {
-    background: #121212;
-}
-main
-{
-    background: linear-gradient(to bottom right, #121212, #97FB57, #121212);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    width: 100%;
-    height: 100%;
-}
-.border-comment
-{
-    height: 433px;
-    overflow: auto;
-    padding: 0 25px 0 0;
+    margin: 7px;
+    padding: 2px 10px;
+    border-radius: 5px;
 }
 
-.divImg
+.current-page 
 {
-    margin-right: 100px;
+    background-color: #FFA500; 
 }
-.CommentsDiv
+
+.info-index
 {
-    font-size: 1.5em;
-    font-weight: bold;
-    margin-bottom: 30px;
+    display: flex;
 }
-#texte
+.info-index img
 {
-    padding: 2px;
+    margin: 75px 50px 0 0;
+}
+object
+{
+    margin: 50px 50px 0 0;
+}
+.detail-info-index
+{
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-top: 50px;
+}
+
+.justify-index
+{
+    text-align: justify;
+    margin-bottom: 15px;
+}
+
+.contact-index
+{
+    text-decoration: none;
+    color: #fff;  
+    background-color: #FFA500; 
+    padding: 3px 10px;
     border-radius: 5px;
-    border: none;
-    outline: none;
+}
+.contact-index:hover
+{
+    background-color: #ffa60066;
+    color: #000;
+    transition: 1s;
+}
+h2
+{
+    margin: 15px 0;
+    /* color: #FFA500;  */
+}
+
+.main-index h2
+{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+#Products
+{
+    background-color: #00000031; 
+    width: 200px;
+    margin: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 15px 10px 40px 10px;
+}
+
+#latest-products
+{
+    display: flex;
+    flex-wrap: wrap;
+    width: 92%;
+    /* background-color: #000;  */
+    margin-left: 4%;
+    justify-content: center;
+    border-radius: 15px;
+}
+
+#latest-products img
+{
+    width: 200px;
+    margin-bottom: 50px;
+}
+
+.left-product
+{
+    position: absolute;
+    padding-left: 15px;
+    color: #000; 
+}
+
+.right-price
+{
+    color: #000; 
+    background-color: #ffa60060;
+    margin: 0 10px 0 150px;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px #FFA500;
+}
+
+.all-product
+{
+    text-decoration: none;
+    color: #000; 
+    display: flex;
+    justify-content: center;
+    /* background-color: #FFA500;  */
+    width: 150px;
+    margin: 30px auto;
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+.info-index2
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.info-index3
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: #FFA500;  */
+    margin: 15px;
+    width: 250px;
+    height: 125px;
+    padding-top: 25px;
+}
+
+.footer-index
+{
+    width: 92%;
+    /* background-color: #FFA500;  */
+    border-radius: 15px;
+    padding: 10px;
+    margin: 30px auto;
+}
+
+.footer-index ul
+{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
+.footer-index ul li
+{
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+}
+
+.wrap-index
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.wrap-index img
+{
+    margin-right: 5px;
+}
+
+.header-shop nav ul
+{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    border: 1px solid grey;
+    border-radius: 15px;
+    width: 92%;
+    margin-left: 4%;
+}
+
+.header-shop nav ul a
+{
+    text-decoration: none;
+    color: #000; 
+    display: flex;
+    align-items: center;
+}
+
+.header-shop nav ul li
+{
+    margin: 7px;
+    padding: 2px 10px;
+    border-radius: 5px;
+}
+
+.header-shop nav ul li:hover
+{
+    background-color: #ffa6006a; 
+}
+
+.h2-product
+{
+    display: flex;
+    justify-content: center;
+    margin-top: 75px;
+}
+
+#our-products img
+{
+    width: 200px;
+    margin-bottom: 50px;
+}
+
+#our-products
+{
+    display: flex;
+    flex-wrap: wrap;
+    width: 92%;
+    /* background-color: #000;  */
+    margin-left: 4%;
+    justify-content: center;
+    border-radius: 15px;
+}
+
+.AddCard
+{
+    position: absolute;
+    margin: 10px 0 0 12px;
+}
+
+.imgShop
+{
+    width: 100px;
+}
+
+table
+{
+    margin: 100px auto;
+}
+
+td, th
+{
+    /* border: 1px solid black; */
+    text-align: center;
+    padding: 15px;
+}
+
+.buttonSC
+{
+    margin: 0 5px;
+}
+
+@media (max-width: 680px) {
+    .header-index nav ul
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header-shop nav ul
+    {
+        flex-direction: column;
+        align-items: center;
+        border: none;
+    }
+    .header-index nav ul li, .header-shop nav ul li
+    {
+        margin: 7px 0;
+    }
+    .info-index
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+    object
+    {
+        margin-top: 15px;
+        margin-right: 0;
+    }
 }
